# Minecraft-Seed-Renderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  Preload.cmake  README.md  cmake_install.cmake  vcpkg.json  xmake.lua
assets/icons/: compass.ppm  compass_16.ppm  compass_32.ppm  compass_4.ppm  compass_8.ppm
assets/scripts/: main.lua
include/: args.h  audio.h  color.h  dynamicarray.h  icons.h  interrupt.h  util.h
scripts/: c2e.py
src/: args.c  color.c  dynamicarray.c  img_gen_test.c  main.c  util.c
